# substitution_pdf_server

./: .gitignore  Cargo.toml
migrations/: 20220123184433_create_table.sql  20220124110643_add_pdf_date_create_idx.sql
src/: json_endpoint.rs  json_handler.rs  main.rs  util.rs
substitution_pdf_to_json/: Cargo.toml
substitution_pdf_to_json/src/: lib.rs
