[package]
name = "substitution_pdf_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
uuid = { version = "0.8.2", features = ["v4"]}
serde = "1.0.134"
serde_json = "1.0.75"
reqwest = "0.11.9"
chrono = "0.4.19"
substitution_pdf_to_json = { path = "./substitution_pdf_to_json"}
lazy_static = "1.4.0"

[dependencies.actix-web]
version = "4.0.0-beta.20"

[profiles.production]
inherits = "release"
lto = "fat"
