[package]
name = "substitution_pdf_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substitution_pdf_to_json = { path = "./substitution_pdf_to_json" }
tokio = { version = "1.15.0", features = ["full"] }
actix-web = "4.0.0-beta.20"
actix-cors = "0.6.0-beta.8"

tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = [ "env-filter" ] }
tracing-core = "0.1.21"

uuid = { version = "0.8.2", features = ["v4"] }

serde = "1.0.134"
serde_json = "1.0.75"

reqwest = "0.11.9"
chrono = "0.4.19"

lazy_static = "1.4.0"

sqlx = { version = "0.5.10", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }

sha2 = "0.10.1"
hex = "0.4.3"

[profile.production]
inherits = "release"
lto = "fat"
